--- a/news11_dev/Makefile
+++ b/news11_dev/Makefile
@@ -1,12 +1,14 @@
 
 # https://lindat.mff.cuni.cz/repository/xmlui/handle/11858/00-097C-0000-0008-D259-7
 
+all: news11.cs news11.de
+
 download:
 	wget http://www.statmt.org/wmt11/test.tgz -O test.tgz
 	gzip -d test.tgz
 	tar -xvf test.tar
 
-preprocess:
+preprocess news11.cs news11.de:
 	sed  's/<[^>]*> *//g' newstest2011-src.cs.sgm | grep . > news11.cs
 	sed  's/<[^>]*> *//g' newstest2011-src.de.sgm | grep . > news11.de
 
