--- a/news13_test/Makefile
+++ b/news13_test/Makefile
@@ -1,3 +1,4 @@
+all: news13.cs news13.de
 
 download test.tgz:
 	wget http://www.statmt.org/wmt13/test.tgz -O test.tgz
@@ -6,9 +7,9 @@ unzip test: test.tgz
 	gunzip test.tgz
 	tar -xvf test.tar
 
-copy news.cs news.de: test
-	sed 's/<[^>]*>//g' test/newstest2013-src.cs.sgm | grep . > news.cs
-	sed 's/<[^>]*>//g' test/newstest2013-src.de.sgm | grep . > news.de
+copy news13.cs news13.de: test
+	sed 's/<[^>]*>//g' test/newstest2013-src.cs.sgm | grep . > news13.cs
+	sed 's/<[^>]*>//g' test/newstest2013-src.de.sgm | grep . > news13.de
 
 
 	
