--- a/data/Makefile
+++ b/data/Makefile
@@ -32,8 +32,9 @@ preprocess: $(DATA) moses
 		perl $(MOSES)/normalize-punctuation.perl > $$d"".prep ;\
 	done
 
+TOKENIZED=dev.cs.prep.tok dev.de.prep.tok train.cs.prep.tok test.cs.prep.tok train.de.prep.tok test.de.prep.tok	
 TOK_CMD=perl $(MOSES)/tokenizer.perl -no-escape -threads `nproc`
-tokenize: preprocess moses
+tokenize $(TOKENIZED): preprocess moses $(DATA)
 	for d in $(DATA_CS); do	\
 		echo $$d"".prep ; \
 		$(TOK_CMD) -l cs < $$d"".prep > $$d"".prep.tok; \
@@ -54,7 +55,7 @@ install_morfessor p3:
 	p3/bin/pip install morfessor polyglot pyicu six pycld2 numpy
 	p3/bin/python3 -c 'from polyglot.downloader import downloader; downloader.download("morph2.cs"); downloader.download("morph2.de")'
 
-morfesize: morphesize.py
+morfesize: morphesize.py $(TOKENIZED)
 	for d in $(DATA_CS); do	\
 		echo $$d"".prep.tok ; \
 		p3/bin/python3 morphesize.py cs < $$d"".prep.tok > $$d"".prep.tok.mor & \
@@ -70,13 +71,13 @@ morfesize: morphesize.py
 #morf_train:
 #	p3/bin/morfessor-train 
 
-oov_analysis:
+oov_analysis: $(TOKENIZED)
 	perl $(MOSES)/../analysis/oov.pl dev.cs.prep.tok < train.cs.prep.tok
 	perl $(MOSES)/../analysis/oov.pl dev.de.prep.tok < train.de.prep.tok
 	perl $(MOSES)/../analysis/oov.pl dev.cs.prep.tok.mor < train.cs.prep.tok.mor
 	perl $(MOSES)/../analysis/oov.pl dev.de.prep.tok.mor < train.de.prep.tok.mor
 
-check_overlap:
+check_overlap: $(TOKENIZED)
 	python3 check_overlap.py train.cs.prep.tok test.cs.prep.tok	
 	python3 check_overlap.py train.de.prep.tok test.de.prep.tok
 	python3 check_overlap.py train.cs.prep.tok dev.cs.prep.tok	
