--- a/data/Makefile
+++ b/data/Makefile
@@ -183,9 +183,9 @@ osub_model_bpe$B.de: $(DIR)/osub.de.prep.tok subword
 	subword/learn_bpe.py -s $B < $(DIR)/osub.de.prep.tok > osub_model_bpe$B.de
 
 $(DIR)/osub.cs.prep.tok.bpe$B: $(DIR)/osub.cs.prep.tok osub_model_bpe$B.cs
-	subword/apply_bpe.py -c model_bpe$B.cs < $(DIR)/osub.cs.prep.tok > $(DIR)/osub.cs.prep.tok.bpe$B
+	subword/apply_bpe.py -c osub_model_bpe$B.cs < $(DIR)/osub.cs.prep.tok > $(DIR)/osub.cs.prep.tok.bpe$B
 $(DIR)/osub.de.prep.tok.bpe$B: $(DIR)/osub.de.prep.tok  osub_model_bpe$B.de
-	subword/apply_bpe.py -c model_bpe$B.de < $(DIR)/osub.de.prep.tok > $(DIR)/osub.de.prep.tok.bpe$B
+	subword/apply_bpe.py -c osub_model_bpe$B.de < $(DIR)/osub.de.prep.tok > $(DIR)/osub.de.prep.tok.bpe$B
 
 osub.cs.bpe: $(DIR)/osub.cs.prep.tok.bpe$B
 	ln -l $(DIR)/osub.cs.prep.tok.bpe$B osub.cs.bpe
