--- a/data/subtitles-v2/Makefile
+++ b/data/subtitles-v2/Makefile
@@ -4,8 +4,9 @@ jrc jrc.cs.gz jrc.de.gz:
 	wget http://opus.lingfil.uu.se/download.php?f=JRC-Acquis%2Fmono%2FJRC-Acquis.de.gz -O jrc.de.gz ; \
 	wait
 
-DIR=/mnt/obo-machacek/subtitles
-#DIR=.
+#DIR=/mnt/obo-machacek/subtitles
+#DIR=/tmp/machacdo
+DIR=.
 $(DIR)/osub.cs.gz:
 	wget http://opus.lingfil.uu.se/download.php?f=OpenSubtitles2016%2Fmono%2FOpenSubtitles2016.cs.gz -O $(DIR)/osub.cs.gz
 
@@ -31,11 +32,12 @@ osub.de: osub.cs-de.tmx.gz
 osub.cs: osub.cs-de.tmx.gz
 	gunzip -c osub.cs-de.tmx.gz | grep '<tuv xml:lang="cs">' | sed -r 's/^ *<tuv xml:lang="cs"><seg>//;s#</seg></tuv>$$##;s/[0-9]+\. ?//' > osub.cs
 
-/mnt/obo-machacek/subtitles/osub.cs.prep.tok.fixlI: osub.cs.prep.tok
-	sed 's/\([a-z]\)I\([ýáěíeéioůúuoa ]\)/\1l\2/g'  osub.cs.prep.tok > /mnt/obo-machacek/subtitles/osub.cs.prep.tok.fixlI
+osub.cs.prep.tok.fixlI: osub.cs.prep.tok
+	sed 's/\([a-z]\)I\([ýáěíeéioůúuoa ]\)/\1l\2/g'  osub.cs.prep.tok > osub.cs.prep.tok.fixlI
 
-osub.cs.clear osub.de.clear:  /mnt/obo-machacek/subtitles/osub.cs.prep.tok.fixlI /mnt/obo-machacek/subtitles/osub.de.prep.tok
-	python3 clear-osub.py /mnt/obo-machacek/subtitles/osub.cs.prep.tok.fixlI /mnt/obo-machacek/subtitles/osub.de.prep.tok
-	ln -s /mnt/obo-machacek/subtitles/osub.cs.prep.tok.fixlI.clear osub.cs.clear
-	ln -s /mnt/obo-machacek/subtitles/osub.de.prep.tok osub.de.clear
+
+osub.cs.clear osub.de.clear:  osub.cs.prep.tok.fixlI osub.de.prep.tok
+	python3 clear-osub.py $(DIR)/osub.cs.prep.tok.fixlI $(DIR)/osub.de.prep.tok
+	ln -s $(DIR)/osub.cs.prep.tok.fixlI.clear osub.cs.clear
+	ln -s $(DIR)/osub.de.prep.tok osub.de.clear
 	
